Style: Fix div overflow problem

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -16,8 +16,14 @@ h1 {
     margin: 0 auto;
 }
 
+.image {
+    max-height: 79px;
+    max-width: 60;
+}
+
 .movie {
     padding: 20px;
+    min-height: 200px;
 }
 
 .movie:hover {
